fix(Modal): fix close button alignment and color

--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -520,7 +520,8 @@
 
 @modal-close-btn-size:          @font-size-small;
 @modal-close-btn-line-height:   @line-height-small;
-@modal-close-btn-color:         var(--rs-text-primary);
+@modal-close-btn-color:         var(--rs-text-secondary);
+@modal-close-btn-hover-color:   var(--rs-text-primary);
 
 // Modal sizes
 @modal-lg: 968px;
@@ -540,7 +541,7 @@
 
 @drawer-close-btn-size:         @font-size-small;
 @drawer-close-btn-line-height:  @line-height-small;
-@drawer-close-btn-color:        @modal-close-btn-color;
+@drawer-close-btn-color:        var(--rs-text-primary);
 
 // Drawer sizes
 @drawer-horizontal-lg: @modal-lg;
